--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -3,6 +3,7 @@
   --pulis-color-black: #0a0a0a;
   --pulis-color-blue: #274c77;
   --pulis-color-grey: #e7ecef;
+  --pulis-color-grey-light: #707070;
   --pulis-color-pink: #E6427E;
   --pulis-color-magenta: #782761;
   --transition: all ease-in .3s;
