--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12099,6 +12099,10 @@ main [role=note] {
 .home-blog__item {
   margin: 1.5rem 0;
 }
+.home-blog__item .c-card__link {
+  color: #000;
+  font-size: 1rem;
+}
 
 .help-item:not(:last-child) {
   margin-bottom: 64px;
@@ -12416,7 +12420,7 @@ main [role=note] {
 .menu-footer-container .menu {
   align-items: center;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   list-style: none;
   margin: 0;
   padding: 0;
