--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12047,6 +12047,49 @@ main [role=note] {
   text-decoration: none;
 }
 
+.skip-to-content {
+  z-index: 999;
+  position: absolute;
+  top: calc(var(--pico-spacing) * 0.75);
+  left: calc(var(--pico-spacing) * 0.75);
+  transform: translateY(-1000%);
+  --pico-box-shadow: var(--pico-card-box-shadow);
+  opacity: 0;
+}
+
+.screen-reader {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.container--small {
+  max-width: 850px;
+  margin: 0 auto;
+  padding-right: 16px;
+  padding-left: 16px;
+}
+
+.support-me {
+  display: block;
+  width: 100%;
+  max-width: 200px;
+}
+
+.no-article .grid {
+  grid-template-columns: 2fr 1fr;
+}
+
+.reply-email {
+  padding: 1.875rem 0;
+}
+
 .c-hero {
   background: var(--pulis-color-grey);
   padding: 40px 0;
@@ -12252,6 +12295,19 @@ main [role=note] {
   border: 1px solid;
   padding: 10px;
   width: 80%;
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--bs-body-color);
+  appearance: none;
+  background-color: var(--bs-body-bg);
+  background-clip: padding-box;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  border-radius: var(--bs-border-radius);
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .navbar-brand {
