--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,6 +14,9 @@
 @import "base/buttons";
 // @import "base/lists";
 
+// Utils 
+@import "utils/utils";  
+
 // Components
 @import "components/hero";
 @import "components/home-blog";
