fix: category page

--- a/assets/scss/base/_body.scss
+++ b/assets/scss/base/_body.scss
@@ -42,10 +42,11 @@ svg:not([class]) {
   padding: 0 !important;
 }
 
-.entry-header > .entry-meta,
-.archive-header {
+.entry-header > .entry-meta {
   padding-bottom: 2rem;
 }
+
+
 
 .entry-meta {
   padding: 1rem 0;
