--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11889,6 +11889,37 @@ Theme colors.
 Sass variables.
  */
 
+.widget_block {
+  padding: 1.25rem 1.25rem 1rem;
+  border-radius: 3px;
+  background: var(--pulis-color-grey);
+}
+
+.wp-block-heading {
+  color: var(--pulis-color-blue);
+  letter-spacing: -0.5px;
+}
+
+.wp-block-categories {
+  list-style-type: "";
+  margin: 0.85rem 0;
+  padding: 0;
+}
+
+.widget ul li {
+  border-top: solid 1px #ddd;
+  padding-top: 0.4rem;
+  font-size: 0.85rem;
+  margin: 0.5rem 0;
+}
+
+.cat-item a {
+  text-decoration: none;
+  color: var(--pulis-color-blue);
+  font-size: 0.875rem;
+  font-weight: 600;
+}
+
 .entry-title {
   color: var(--pulis-color-black);
   font-size: 3.375rem;
@@ -11898,6 +11929,123 @@ Sass variables.
 @media (max-width: 480px) {
   .entry-title {
     padding-top: 0;
+  }
+}
+
+.archive-title {
+  font-weight: 700;
+  letter-spacing: -1px;
+}
+
+.category-description p {
+  margin: 0.85rem 0;
+  font-size: 1.25rem;
+}
+
+.category__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.category__item {
+  margin-bottom: 2rem;
+}
+
+.category__link {
+  position: relative;
+  color: var(--pulis-color-blue);
+  text-decoration: none;
+}
+.category__link:after {
+  bottom: 0;
+  content: "";
+  left: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.category__link:hover {
+  outline: auto 2px var(--pulis-color-blue);
+  outline-offset: 4px;
+}
+
+.category__thumbnail img {
+  max-width: 100%;
+  margin: 0;
+  object-fit: cover;
+  height: 200px;
+}
+
+.category__content {
+  padding: 0.75rem 1.5rem 0 1.5rem;
+}
+.category__content h3, .category__content .h3 {
+  font-size: 1.1875rem;
+}
+.category__content p {
+  font-size: 1rem;
+}
+.category__content--meta {
+  margin: 0.85rem 0;
+  padding: 0 1.5rem;
+}
+.category__content--meta .time {
+  text-transform: capitalize;
+}
+
+.category--inner {
+  border: solid 1px #CCC;
+  background-color: var(--palette-bg);
+  border-radius: 3px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.category__excerpt {
+  font-size: 0.95rem;
+}
+.category__excerpt p {
+  margin: 0.85rem 0;
+}
+
+.pagination {
+  margin: 2rem 0;
+  font-size: 1em;
+  font-weight: 600;
+}
+@media (max-width: 480px) {
+  .pagination {
+    margin: 1rem 0;
+  }
+}
+
+.pagination a,
+.pagination span {
+  padding: 0.4em 0.85em;
+  margin-right: 10px;
+  font-size: 0.9375rem;
+  color: var(--pulis-color-blue);
+  text-decoration: none;
+  border: 1px solid #ccc;
+  transition: all 0.3s;
+}
+
+.pagination a:hover, .pagination span.current {
+  background: var(--pulis-color-blue);
+  color: var(--pulis-color-white);
+  border: 1px solid #AFAFAF;
+}
+
+.pagination span.current {
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .breadcrumb-item {
+    font-size: 0.8125rem;
   }
 }
 
@@ -11941,8 +12089,7 @@ svg:not([class]) {
   padding: 0 !important;
 }
 
-.entry-header > .entry-meta,
-.archive-header {
+.entry-header > .entry-meta {
   padding-bottom: 2rem;
 }
 
@@ -12430,16 +12577,9 @@ main [role=note] {
   padding-bottom: 1px;
 }
 
-.sidebar {
-  border-left: 0.06rem solid var(--soft-gray);
-  width: 25.75rem;
-  min-width: 25.75rem;
-  padding-top: 4rem;
-  padding-left: 4rem;
-  position: relative;
-}
-
 .post-date {
+  font-size: 0.75rem;
+  text-align: center;
   text-transform: uppercase;
   color: var(--pulis-color-wheat);
 }
@@ -12447,6 +12587,17 @@ main [role=note] {
 .entry-content {
   margin-top: 3rem;
   margin-bottom: 2rem;
+}
+
+.sidebar h2, .sidebar .h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.sidebar section {
+  margin: 1.5rem 0;
+}
+.sidebar section:first-child {
+  margin-top: 0;
 }
 
 .services__headline {
