--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -24,6 +24,7 @@
 @import "components/comments";
 @import "components/card";
 @import "components/navigation";
+@import "components/notes";
 @import "components/newsletter";
 
 // Layout
