--- a/assets/scss/components/_bookmarks.scss
+++ b/assets/scss/components/_bookmarks.scss
@@ -6,6 +6,10 @@
   margin-bottom: rem(80);
 
   @extend .list-grid;
+
+  @media(max-width: 630px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .bookmark__item {
