--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -163,7 +163,9 @@
 @import "components/comments";
 @import "components/card";
 @import "components/navigation";
+@import "components/breadcrumbs";
 @import "components/bookmarks";
+@import "components/blogroll";
 @import "components/notes";
 @import "components/newsletter";
 @import "components/pill";
