--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12251,7 +12251,7 @@ Theme colors.
 Sass variables.
  */
 .entry-header {
-  padding-bottom: 8.25rem;
+  padding-bottom: 1.875rem;
 }
 
 .post-category__list {
@@ -12443,6 +12443,10 @@ Sass variables.
 .category a {
   color: #fff;
   text-decoration: none;
+}
+
+.post-single__date {
+  margin-bottom: 2rem;
 }
 
 html {
